# pySki

./: .coveragerc  .gitignore  CREDITS.txt  LICENSE  README.md  altitude.html  colours.css  data.js  demo_canvas.html  demo_canvas.js  divs.css  drawing.js  events.js  location.html  location_large.html  location_timeline_worker.js  meta.js  pyproject.toml  pytz  requirements.txt  setup.py  ski  speed.html  summary.html
.github/workflows/: tests.yml
data/: 20120211.gsd  20120212.gsd  20120216.gsd  20120217.gsd  20180215.gsd  sjr_20120211.gsd  sjr_20120211_1000.gsd  sjr_20120212.gsd  sjr_20120212_1000.gsd  sjr_20120216.gsd  sjr_20120217.gsd  ski_11-02-2012_sjr_20120211.csv  ski_12-02-2012_sjr_20120212.csv  ski_20130214_sjr.gpx
ski/: __init__.py  config.py  coordinate.py  dash.py  dg100.py  gsd.py  loader.py  logging.py  processor.py  stream.py  utils.py
ski/aws/: dynamo.py  lambda.py  s3.py  sqs.py
ski/conf/: config.yaml
ski/data/: commons.py  coordinate.py  pointutils.py
ski/io/: cleanup.py  dataloader.py  db.py  enrich.py  gpx.py  gsd.py  interpolate.py  outlyer.py  track.py
ski/loader/: batcher.py  cleanup.py  dataloader.py  enrich.py  interpolate.py  outlyer.py  window.py
src/: GLTester.py
src/data/: Interpolator.py  Processor.py  Tracks.py  __init__.py
src/io/: CSVLoader.py
src/ski/: GLTester.py  MultiPlotTester.py  Tester.py  __init__.py  coordinate.py  gps.py  tracks.py
src2/ski/: coordinate.py  gps.py
tests/: coordinate_test.py  gsd_test.py  processor_test.py  utils_test.py
tests/scripts/: dataloader-gpx-from-file-to-dynamo.py  (+17 more)
(+61 files in other folders)
