[project]
name = "pySki"
version = "3.0.0"
authors = [
  { name="Steve Roberts", email="steve.roberts@essarsoftware.co.uk" },
]
description = "Python implementation of GPS ski data analysis tool."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
keywords = ["python", "gps", "ski", "gsd", "track"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Dash",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3"
]

[project.urls]
"Homepage" = "https://github.com/essar/pySki"
"Bug Tracker" = "https://github.com/essar/pySki/issues"